# magic-e2e

./: README.md  pyproject.toml
.github/prompts/: plan-backendRestApi.prompt.md  plan-consolidatedAgentDemo.prompt.md  plan-cortexInterfaceChatUi.prompt.md  plan-cortexMobile.prompt.md
archives/db/: tickets.db
backend/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose.yml  requirements.txt  server.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  factory.py  instructions.py
backend/app/core/: __init__.py  banner.py  config.py  logging.py  paths.py
backend/app/history/: __init__.py  sqlite_provider.py
backend/app/middleware/: __init__.py  exception_mw.py  guardrail_mw.py  logging_mw.py
backend/app/ticketing/: __init__.py  database.py  (+6 more)
db/: tickets.db
docs/: complete-prompt.md
experiments/: consolidated-agent-demo.ipynb  mcp-demo.ipynb  ticket-management-agent-enterprise.ipynb  use-foundry-agent-as-tool-in-another-agent.ipynb
experiments/db/: blacklist.txt  chat_history.db
frontend/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  TROUBLESHOOTING.md  docker-compose.yml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
mobile/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  TROUBLESHOOTING.md  app.json  babel.config.js  package-lock.json  package.json
mobile/app/: _layout.jsx
mobile/docs/: DESIGN.md
(+43 files in other folders)
