[project]
name = "e2e"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.3.0",
    "azure-identity>=1.25.3",
    "fastapi>=0.115",
    "httpx>=0.27",
    "mcp>=1.27.0",
    "pydantic-settings>=2.5",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0",
    "sse-starlette>=2.1",
    "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
backend = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.5",
    "sse-starlette>=2.1",
    "slowapi>=0.1.9",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "sqlalchemy>=2.0",
]
